// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable should render autoload 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
          <div
            class="checkbox-cell"
          >
            <input
              id="abcd"
              type="checkbox"
            />
            <label
              aria-label="Selection control for all visible items"
              for="abcd"
            />
          </div>
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
        >
          Column 1
        </th>
        <th
          class=""
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody
      translate="no"
    >
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id0"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id0"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id1"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id1"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id2"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id2"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id3"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id3"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id4"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id4"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id5"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id5"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id6"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id6"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id7"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id7"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id8"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id8"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id9"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id9"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTable should render click-to-load 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
          <div
            class="checkbox-cell"
          >
            <input
              id="abcd"
              type="checkbox"
            />
            <label
              aria-label="Selection control for all visible items"
              for="abcd"
            />
          </div>
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
        >
          Column 1
        </th>
        <th
          class=""
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody
      translate="no"
    >
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id0"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id0"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id1"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id1"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id2"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id2"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id3"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id3"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id4"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id4"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id5"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id5"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id6"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id6"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id7"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id7"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id8"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id8"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id9"
            id="abcd"
            type="checkbox"
          />
          <label
            aria-label="id9"
            for="abcd"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <button
      class="button secondary"
      data-testid="click-to-load-more"
      type="button"
    >
      Load more data
    </button>
  </div>
</DocumentFragment>
`;
